testsuite/tests/partial-sigs/should_fail/NamedExtraConstraintsWildcard.hs
{-# LANGUAGE PartialTypeSignatures, NamedWildcards #-}
module NamedExtraConstraintsWildcard where

foo :: (Eq a, _a) => a -> a
foo = undefined
