testsuite/tests/partial-sigs/should_fail/NamedExtraConstraintsWildcard.stderr

NamedExtraConstraintsWildcard.hs:4:15: error:
    Named wildcard ‘_a’ not allowed as an extra-contraint
      Use an anonymous wildcard instead
      in the type signature for ‘foo’
